--- a/rush-plugins/rush-sortpack/rush-plugin-manifest.json
+++ b/rush-plugins/rush-sortpack/rush-plugin-manifest.json
@@ -2,7 +2,7 @@
     "$schema": "https://developer.microsoft.com/json-schemas/rush/v5/rush-plugin-manifest.schema.json",
     "plugins": [
       {
-        "pluginName": "rush-sort-package-json",
+        "pluginName": "rush-sortpack",
         "description": "Rush plugin for sort package.json file in the project",
         "commandLineJsonFilePath": "command-line.json"
       }
