--- a/common/config/rush/.npmrc
+++ b/common/config/rush/.npmrc
@@ -19,4 +19,12 @@
 #   //registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}
 #
 registry=https://registry.npmjs.org/
-always-auth=false
+always-auth=true
+//registry.npmjs.org/:_authToken=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
+
+# https://pnpm.io/7.x/npmrc#workspace-settings
+link-workspace-packages=deep
+prefer-workspace-packages=true
+
+# https://pnpm.io/7.x/npmrc#public-hoist-pattern
+public-hoist-pattern[]=!*eslint*
