--- a/rush-plugins/rush-sortpack/package.json
+++ b/rush-plugins/rush-sortpack/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@fox/rush-sortpack",
   "version": "0.0.1",
+  "private": false,
   "description": "Rush plugin for sort package.json file in the project",
   "license": "MIT",
   "type": "module",
