--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -31,6 +31,10 @@
       "allowedCategories": [ "rush-plugins" ]
     },
     {
+      "name": "@rushstack/ts-command-line",
+      "allowedCategories": [ "rush-plugins" ]
+    },
+    {
       "name": "sort-package-json",
       "allowedCategories": [ "rush-plugins" ]
     },
