--- a/internal/tsconfig/package.json
+++ b/internal/tsconfig/package.json
@@ -20,6 +20,9 @@
     "vue.json",
     "web.json"
   ],
+  "scripts": {
+    "build": ""
+  },
   "peerDependencies": {
     "typescript": "~5.1.6"
   },
