--- a/rush-plugins/rush-sortpack/package.json
+++ b/rush-plugins/rush-sortpack/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@rushstack/node-core-library": "~3.59.7",
     "@rushstack/rush-sdk": "~5.106.0",
+    "@rushstack/ts-command-line": "~4.15.2",
     "sort-package-json": "~2.5.1"
   },
   "devDependencies": {
