--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -41,6 +41,10 @@
     {
       "name": "typescript",
       "allowedCategories": [ "internal", "rush-plugins" ]
+    },
+    {
+      "name": "yargs",
+      "allowedCategories": [ "rush-plugins" ]
     }
   ]
 }
