--- a/rush-plugins/rush-sortpack/package.json
+++ b/rush-plugins/rush-sortpack/package.json
@@ -21,7 +21,8 @@
     "@rushstack/node-core-library": "~3.59.7",
     "@rushstack/rush-sdk": "~5.106.0",
     "@rushstack/ts-command-line": "~4.15.2",
-    "sort-package-json": "~2.5.1"
+    "sort-package-json": "~2.5.1",
+    "yargs": "~17.7.2"
   },
   "devDependencies": {
     "@foxnorn/tsconfig": "workspace:*",
@@ -29,6 +30,7 @@
     "@rushstack/heft": "~0.58.2",
     "@rushstack/heft-typescript-plugin": "~0.1.21",
     "@types/node": "~20.6.0",
+    "@types/yargs": "~17.0.24",
     "typescript": "~5.2.2"
   }
 }
