--- a/heft-plugins/heft-storybook-plugin/package.json
+++ b/heft-plugins/heft-storybook-plugin/package.json
@@ -17,16 +17,17 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@rushstack/node-core-library": "~3.59.7"
+    "@rushstack/node-core-library": "~3.60.0"
   },
   "devDependencies": {
     "@foxnorn/tsconfig": "workspace:*",
-    "@rushstack/heft": "~0.58.2",
-    "@rushstack/heft-typescript-plugin": "~0.1.21",
-    "@types/node": "~20.6.0",
+    "@rushstack/heft": "~0.59.0",
+    "@rushstack/heft-typescript-plugin": "~0.2.0",
+    "@types/node": "~20.6.1",
+    "@types/yargs": "~17.0.24",
     "typescript": "~5.2.2"
   },
   "peerDependencies": {
-    "@rushstack/heft": "^0.59.0"
+    "@rushstack/heft": "~0.59.0"
   }
 }
