--- a/rigs/heft-web-rig/package.json
+++ b/rigs/heft-web-rig/package.json
@@ -13,11 +13,11 @@
   "type": "module",
   "main": "lib/index.js",
   "scripts": {
-    "build": "",
-    "_phase:build": ""
+    "_phase:build": "",
+    "build": ""
   },
   "devDependencies": {
-    "@rushstack/heft": "~0.58.2",
-    "@rushstack/heft-typescript-plugin": "~0.1.21"
+    "@rushstack/heft": "~0.59.0",
+    "@rushstack/heft-typescript-plugin": "~0.2.0"
   }
 }
