--- a/heft-plugins/heft-typescript-plugin/package.json
+++ b/heft-plugins/heft-typescript-plugin/package.json
@@ -2,7 +2,7 @@
   "name": "@foxnorn/heft-typescript-plugin",
   "version": "1.0.0",
   "private": false,
-  "description": "Heft plugin for checkup your project",
+  "description": "Heft plugin for TypeScript",
   "repository": {
     "type": "git",
     "url": "https://github.com/MsBeiBei/Foxnorn.git",
@@ -11,6 +11,8 @@
   "license": "MIT",
   "author": "foxnorn",
   "type": "commonjs",
+  "main": "lib/index.js",
+  "types": "dist/heft-typescript-plugin.d.ts",
   "scripts": {
     "_phase:build": "heft run --only build -- --clean",
     "_phase:test": "heft run --only test -- --clean",
@@ -18,7 +20,9 @@
     "start": "heft test --clean --watch"
   },
   "dependencies": {
-    "@rushstack/node-core-library": "~3.60.0"
+    "@rushstack/node-core-library": "~3.60.0",
+    "@foxnorn/heft-lib": "workspace:*",
+    "@rushstack/heft-config-file": "~0.14.0"
   },
   "devDependencies": {
     "@foxnorn/heft-node-rig": "workspace:*",
@@ -28,7 +32,8 @@
     "@rushstack/heft-typescript-plugin": "~0.2.0",
     "@types/node": "~20.6.1",
     "@types/yargs": "~17.0.24",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "tslib": "~2.6.2"
   },
   "peerDependencies": {
     "@rushstack/heft": "~0.59.0"
