--- a/rigs/heft-node-rig/package.json
+++ b/rigs/heft-node-rig/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@foxnorn/heft-checkup-plugin": "workspace:*",
+    "@foxnorn/heft-typescript-plugin": "workspace:*",
     "@rushstack/heft-typescript-plugin": "~0.2.0",
     "typescript": "~5.2.2"
   },
