--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -59,6 +59,10 @@
       "allowedCategories": [ "rush-plugins" ]
     },
     {
+      "name": "semver",
+      "allowedCategories": [ "heft-plugins" ]
+    },
+    {
       "name": "sort-package-json",
       "allowedCategories": [ "rush-plugins" ]
     },
