--- a/playground/heft-typescript-plugin-demo/tsconfig.json
+++ b/playground/heft-typescript-plugin-demo/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@foxnorn/tsconfig/node.cjs.json",
+  "extends": "@foxnorn/tsconfig/node.next.json",
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "lib"
