--- a/heft-plugins/heft-typescript-plugin/src/schemas/tsconfig.schema.json
+++ b/heft-plugins/heft-typescript-plugin/src/schemas/tsconfig.schema.json
@@ -1,27 +1,5 @@
 {
   "$schema": "http://json-schema.org/draft-04/schema#",
   "description": "Schema that matches anything",
-  "oneOf": [
-    {
-      "type": "array"
-    },
-    {
-      "type": "boolean"
-    },
-    {
-      "type": "integer"
-    },
-    {
-      "type": "null"
-    },
-    {
-      "type": "number"
-    },
-    {
-      "type": "object"
-    },
-    {
-      "type": "string"
-    }
-  ]
+  "$ref":"https://json.schemastore.org/tsconfig"
 }
