--- a/heft-plugins/heft-lib/tsconfig.json
+++ b/heft-plugins/heft-lib/tsconfig.json
@@ -1,7 +1,3 @@
 {
-  "extends": "@foxnorn/tsconfig/node.next.json",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "lib"
-  }
+  "extends": "@foxnorn/tsconfig/node.next.json"
 }
