--- a/heft-plugins/heft-typescript-plugin/tsconfig.json
+++ b/heft-plugins/heft-typescript-plugin/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "@foxnorn/tsconfig/node.next.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "lib"
+    "outDir": "lib",
   }
 }
