--- a/heft-plugins/heft-lib/tsconfig.json
+++ b/heft-plugins/heft-lib/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "@foxnorn/tsconfig/node.next.json"
+  "extends": "@foxnorn/tsconfig/node.next.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "lib",
+    "declarationDir": "types"
+  }
 }
