--- a/playground/heft-typescript-plugin-demo/tsconfig.json
+++ b/playground/heft-typescript-plugin-demo/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "@foxnorn/tsconfig/node.next.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "lib"
+    "outDir": "lib",
   }
 }
