--- a/rigs/heft-node-rig/package.json
+++ b/rigs/heft-node-rig/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "@foxnorn/heft-typescript-plugin": "workspace:*",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "@rushstack/heft-typescript-plugin": "~0.2.0"
   },
   "devDependencies": {
     "@rushstack/heft": "~0.59.0"
