--- a/heft-plugins/heft-lib/tsconfig.json
+++ b/heft-plugins/heft-lib/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "lib",
-    "declarationDir": "types"
+    "declarationDir": "lib/types"
   }
 }
