--- a/heft-plugins/heft-lib/package.json
+++ b/heft-plugins/heft-lib/package.json
@@ -9,7 +9,7 @@
   },
   "type": "commonjs",
   "main": "lib/index.js",
-  "types": "types/index.d.ts",
+  "types": "lib/types/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
