--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -55,6 +55,14 @@
       "allowedCategories": [ "rush-plugins" ]
     },
     {
+      "name": "lodash-es",
+      "allowedCategories": [ "heft-plugins" ]
+    },
+    {
+      "name": "ramda",
+      "allowedCategories": [ "heft-plugins" ]
+    },
+    {
       "name": "semver",
       "allowedCategories": [ "heft-plugins" ]
     },
