--- a/heft-plugins/heft-typescript-plugin/package.json
+++ b/heft-plugins/heft-typescript-plugin/package.json
@@ -26,7 +26,9 @@
     "@rushstack/heft": "~0.59.0",
     "typescript": "~5.2.2",
     "@types/node": "~20.6.1",
-    "@types/semver": "~7.5.3"
+    "@types/semver": "~7.5.3",
+    "@foxnorn/type": "workspace:*",
+    "@foxnorn/shared": "workspace:*"
   },
   "peerDependencies": {
     "@rushstack/heft": "~0.59.0"
