--- a/playground/heft-typescript-plugin-demo/package.json
+++ b/playground/heft-typescript-plugin-demo/package.json
@@ -6,7 +6,7 @@
     "_phase:build": "heft run --only build -- --clean",
     "_phase:test": "heft run --only test -- --clean",
     "build": "heft build --clean",
-    "start": "heft build-watch"
+    "start": "heft test --clean --watch"
   },
   "dependencies": {
     "@rushstack/node-core-library": "~3.60.0"
