--- a/core/shared/tsconfig.json
+++ b/core/shared/tsconfig.json
@@ -3,6 +3,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "lib",
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
     "declarationDir": "lib/types",
     "types": [
       "@foxnorn/type"
