--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -64,7 +64,7 @@
     },
     {
       "name": "lodash-es",
-      "allowedCategories": [ "heft-plugins" ]
+      "allowedCategories": [ "heft-plugins", "internal" ]
     },
     {
       "name": "ramda",
@@ -77,6 +77,10 @@
     {
       "name": "sort-package-json",
       "allowedCategories": [ "rush-plugins" ]
+    },
+    {
+      "name": "ts-node",
+      "allowedCategories": [ "internal" ]
     },
     {
       "name": "tslib",
