--- a/template/chrome/tsconfig.json
+++ b/template/chrome/tsconfig.json
@@ -3,8 +3,17 @@
   "compilerOptions": {
     "baseUrl": ".",
     "types": [
+      "node",
       "chrome",
       "@foxnorn/type"
-    ]
+    ],
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+      "#/*": [
+        "types/*"
+      ]
+    }
   }
 }
