--- a/template/chrome/package.json
+++ b/template/chrome/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "private": false,
   "type": "module",
+  "description": "chrome extension boilerplate",
   "repository": {
     "type": "git",
     "url": "https://github.com/MsBeiBei/Foxnorn.git",
     "directory": "template/chrome"
   },
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "vite build --watch --mode development",
     "build": "vite build"
   },
   "license": "MIT",
@@ -24,9 +25,12 @@
     "vue-tsc": "~1.8.22",
     "less": "~4.2.0",
     "@vitejs/plugin-vue-jsx": "~3.0.2",
-    "@vitejs/plugin-vue": "~4.4.0"
+    "@vitejs/plugin-vue": "~4.4.0",
+    "@crxjs/vite-plugin": "~2.0.0-beta.21"
   },
   "dependencies": {
-    "vue": "~3.3.7"
+    "vue": "~3.3.7",
+    "dayjs": "~1.11.10",
+    "@vueuse/core": "~10.5.0"
   }
 }
