--- a/template/chrome/package.json
+++ b/template/chrome/package.json
@@ -33,6 +33,7 @@
     "vue": "~3.3.7",
     "dayjs": "~1.11.10",
     "uuid": "~9.0.1",
-    "axios": "~1.6.0"
+    "axios": "~1.6.0",
+    "dexie": "~3.2.4"
   }
 }
