--- a/rush-plugins/rush-sortpack-plugin/package.json
+++ b/rush-plugins/rush-sortpack-plugin/package.json
@@ -26,8 +26,9 @@
     "@foxnorn/heft-node-rig": "workspace:*",
     "@foxnorn/tsconfig": "workspace:*",
     "@microsoft/rush-lib": "~5.106.0",
-    "@rushstack/heft": "~0.59.0",
+    "@rushstack/heft": "~0.63.2",
     "@types/node": "~20.6.1",
+    "typescript": "~5.3.2",
     "@types/yargs": "~17.0.24"
   }
 }
