--- a/core/elements/package.json
+++ b/core/elements/package.json
@@ -11,5 +11,11 @@
     "build": ""
   },
   "type": "module",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@foxnorn/tsconfig": "workspace:*",
+    "typescript": "~5.3.2",
+    "@foxnorn/type": "workspace:*",
+    "tslib": "~2.6.2"
+  }
 }
