--- a/rigs/heft-node-rig/package.json
+++ b/rigs/heft-node-rig/package.json
@@ -1,15 +1,6 @@
 {
   "name": "@foxnorn/heft-node-rig",
   "version": "1.0.0",
-  "private": false,
-  "description": "A rig package for Node.js projects that build using Heft",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MsBeiBei/Foxnorn.git",
-    "directory": "rush-plugins/heft-node-rig"
-  },
-  "license": "MIT",
-  "author": "foxnorn",
   "type": "module",
   "main": "lib/index.js",
   "scripts": {
@@ -18,7 +9,7 @@
   },
   "dependencies": {
     "@foxnorn/heft-typescript-plugin": "workspace:*",
-    "typescript": "~5.3.2",
+    "typescript": "^5.3.2",
     "@rushstack/heft-typescript-plugin": "~0.2.0"
   },
   "devDependencies": {
