--- a/core/draggable/package.json
+++ b/core/draggable/package.json
@@ -1,19 +1,12 @@
 {
   "name": "@foxnorn/draggable",
   "version": "1.0.0",
-  "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MsBeiBei/Foxnorn.git",
-    "directory": "core/draggable"
-  },
   "scripts": {
     "build": "tsc"
   },
-  "license": "MIT",
   "devDependencies": {
     "@foxnorn/tsconfig": "workspace:*",
-    "typescript": "~5.3.2",
+    "typescript": "^5.3.2",
     "@foxnorn/type": "workspace:*",
     "tslib": "~2.6.2"
   }
