--- a/core/elements/package.json
+++ b/core/elements/package.json
@@ -1,20 +1,13 @@
 {
   "name": "@foxnorn/elements",
   "version": "1.0.0",
-  "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MsBeiBei/Foxnorn.git",
-    "directory": "core/elements"
-  },
   "scripts": {
     "build": ""
   },
   "type": "module",
-  "license": "MIT",
   "devDependencies": {
     "@foxnorn/tsconfig": "workspace:*",
-    "typescript": "~5.3.2",
+    "typescript": "^5.3.2",
     "@foxnorn/type": "workspace:*",
     "tslib": "~2.6.2"
   }
