--- a/core/glm/package.json
+++ b/core/glm/package.json
@@ -1,19 +1,13 @@
 {
   "name": "@foxnorn/glm",
   "version": "1.0.0",
-  "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MsBeiBei/Foxnorn.git",
-    "directory": "core/glm"
-  },
   "scripts": {
     "build": ""
   },
   "license": "MIT",
   "devDependencies": {
-    "typescript": "~5.3.2",
-    "@types/node": "~20.6.1",
+    "typescript": "^5.3.2",
+    "@types/node": "^20.10.3",
     "@foxnorn/type": "workspace:*",
     "@foxnorn/tsconfig": "workspace:*"
   }
