--- a/core/shared/package.json
+++ b/core/shared/package.json
@@ -1,22 +1,15 @@
 {
   "name": "@foxnorn/shared",
   "version": "1.0.0",
-  "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MsBeiBei/Foxnorn.git",
-    "directory": "core/shared"
-  },
   "scripts": {
     "build": "tsc"
   },
-  "license": "MIT",
   "main": "lib/index.js",
   "module": "lib/esm/index.js",
   "types": "lib/type/index.d.ts",
   "devDependencies": {
     "@foxnorn/tsconfig": "workspace:*",
-    "typescript": "~5.3.2",
+    "typescript": "^5.3.2",
     "@foxnorn/type": "workspace:*",
     "tslib": "~2.6.2"
   }
