--- a/core/type/package.json
+++ b/core/type/package.json
@@ -2,14 +2,8 @@
   "name": "@foxnorn/type",
   "version": "1.0.0",
   "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MsBeiBei/Foxnorn.git",
-    "directory": "core/type"
-  },
   "scripts": {
     "build": ""
   },
-  "type": "commonjs",
-  "license": "MIT"
+  "type": "commonjs"
 }
