--- a/internal/tsconfig/package.json
+++ b/internal/tsconfig/package.json
@@ -1,13 +1,6 @@
 {
   "name": "@foxnorn/tsconfig",
   "version": "1.0.0",
-  "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MsBeiBei/Foxnorn.git",
-    "directory": "internal/tsconfig"
-  },
-  "license": "MIT",
   "main": "tsconfig.json",
   "files": [
     "base.json",
@@ -23,7 +16,7 @@
     "build": ""
   },
   "peerDependencies": {
-    "typescript": "~5.3.2"
+    "typescript": "^5.3.2"
   },
   "tsconfig": "tsconfig.json"
 }
