--- a/playground/heft-checkup-plugin-demo/package.json
+++ b/playground/heft-checkup-plugin-demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "heft-checkup-plugin-demo",
   "version": "1.0.0",
-  "private": true,
+ 
   "scripts": {
     "build": "heft build --clean",
     "start": "heft build-watch",
@@ -17,8 +17,8 @@
     "@microsoft/rush-lib": "~5.106.0",
     "@rushstack/heft": "~0.63.2",
     "@rushstack/heft-typescript-plugin": "~0.2.0",
-    "@types/node": "~20.6.1",
+    "@types/node": "^20.10.3",
     "@types/yargs": "~17.0.24",
-    "typescript": "~5.3.2"
+    "typescript": "^5.3.2"
   }
 }
