--- a/rush-plugins/rush-filter-plugin/package.json
+++ b/rush-plugins/rush-filter-plugin/package.json
@@ -1,15 +1,6 @@
 {
   "name": "@foxnorn/rush-filter-plugin",
   "version": "1.0.0",
-  "private": false,
-  "description": "Rush plugin for picking packages by name or by relation",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MsBeiBei/Foxnorn.git",
-    "directory": "rush-plugins/rush-filter-plugin"
-  },
-  "license": "MIT",
-  "author": "foxnorn",
   "main": "lib/index.js",
   "types": "lib/index..d.ts",
   "scripts": {
@@ -22,7 +13,7 @@
     "@microsoft/rush-lib": "~5.106.0",
     "@rushstack/heft": "~0.63.2",
     "@rushstack/heft-typescript-plugin": "~0.2.0",
-    "@types/node": "~20.6.1",
-    "typescript": "~5.3.2"
+    "@types/node": "^20.10.3",
+    "typescript": "^5.3.2"
   }
 }
