--- a/template/chrome/package.json
+++ b/template/chrome/package.json
@@ -1,36 +1,28 @@
 {
   "name": "@foxnorn/chrome",
   "version": "1.0.0",
-  "private": false,
   "type": "module",
-  "description": "chrome extension boilerplate",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MsBeiBei/Foxnorn.git",
-    "directory": "template/chrome"
-  },
   "scripts": {
     "dev": "vite build --watch --mode development",
     "build": "vite build"
   },
-  "license": "MIT",
   "devDependencies": {
-    "typescript": "~5.3.2",
-    "@types/node": "~20.6.1",
+    "typescript": "^5.3.2",
+    "@types/node": "^20.10.3",
     "@foxnorn/type": "workspace:*",
     "@foxnorn/shared": "workspace:*",
     "@foxnorn/tsconfig": "workspace:*",
-    "vite": "~4.5.0",
+    "vite": "^5.0.6",
     "@types/chrome": "~0.0.249",
-    "vue-tsc": "~1.8.22",
+    "vue-tsc": "^1.8.25",
     "less": "~4.2.0",
-    "@vitejs/plugin-vue-jsx": "~3.0.2",
-    "@vitejs/plugin-vue": "~4.4.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vitejs/plugin-vue": "^4.5.1",
     "@crxjs/vite-plugin": "~2.0.0-beta.21",
     "@types/uuid": "~9.0.6"
   },
   "dependencies": {
-    "vue": "~3.3.7",
+    "vue": "^3.3.10",
     "dayjs": "~1.11.10",
     "uuid": "~9.0.1",
     "axios": "~1.6.0",
