--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -28,7 +28,7 @@
     },
     {
       "name": "@foxnorn/tsconfig",
-      "allowedCategories": [ "heft-plugins", "internal", "libraries", "playground", "rush-plugins" ]
+      "allowedCategories": [ "app", "heft-plugins", "internal", "libraries", "playground", "rush-plugins" ]
     },
     {
       "name": "@foxnorn/type",
