--- a/app/mind/package.json
+++ b/app/mind/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "typescript": "^5.3.2",
     "vite": "^5.0.6",
-    "vue-tsc": "^1.8.25"
+    "vue-tsc": "^1.8.25",
+    "@foxnorn/tsconfig": "workspace:*"
   }
 }
